@@ -1,4 +1,6 @@
 /*  Copyright (C) 2014 JabRef contributors.
+    Copyright (C) 2015 Oliver Kopp
+
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
@@ -11,16 +13,14 @@
 
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-*/
+ */
 package net.sf.jabref.importer.fetcher;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
-import java.net.URLEncoder;
 
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
@@ -31,11 +31,11 @@ import net.sf.jabref.model.entry.BibtexEntry;
 import net.sf.jabref.Globals;
 import net.sf.jabref.JabRefPreferences;
 import net.sf.jabref.logic.l10n.Localization;
+import net.sf.jabref.logic.util.DOI;
 import net.sf.jabref.util.Util;
 
 public class DOItoBibTeXFetcher implements EntryFetcher {
 
-    private static final String URL_PATTERN = "http://dx.doi.org/%s";
     private final CaseKeeper caseKeeper = new CaseKeeper();
     private final UnitFormatter unitFormatter = new UnitFormatter();
 
@@ -47,16 +47,12 @@ public class DOItoBibTeXFetcher implements EntryFetcher {
 
     @Override
     public boolean processQuery(String query, ImportInspector inspector, OutputPrinter status) {
-
         BibtexEntry entry = getEntryFromDOI(query, status);
-        if (entry != null)
-        {
+        if (entry != null) {
             inspector.addEntry(entry);
             return true;
-        } else {
-            return false;
         }
-
+        return false;
     }
 
     @Override
@@ -80,22 +76,23 @@ public class DOItoBibTeXFetcher implements EntryFetcher {
         return null;
     }
 
-    private BibtexEntry getEntryFromDOI(String doi, OutputPrinter status) {
-        String q;
+    public BibtexEntry getEntryFromDOI(String doiStr, OutputPrinter status) {
+        DOI doi;
         try {
-            q = URLEncoder.encode(doi, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            // this should never happen
-            e.printStackTrace();
+            doi = new DOI(doiStr);
+        } catch (IllegalArgumentException e) {
+            status.showMessage(Localization.lang("Invalid DOI: '%0'.", doiStr),
+                    Localization.lang("Get BibTeX entry from DOI"),
+                    JOptionPane.INFORMATION_MESSAGE);
             return null;
         }
 
-        String urlString = String.format(DOItoBibTeXFetcher.URL_PATTERN, q);
-
         // Send the request
+
+        // construct URL
         URL url;
         try {
-            url = new URL(urlString);
+            url = doi.getURI().toURL();
         } catch (MalformedURLException e) {
             e.printStackTrace();
             return null;
@@ -117,9 +114,11 @@ public class DOItoBibTeXFetcher implements EntryFetcher {
         } catch (FileNotFoundException e) {
 
             if (status != null) {
-                status.showMessage(Localization.lang("Unknown DOI: '%0'.",
-                                doi),
-                        Localization.lang("Get BibTeX entry from DOI"), JOptionPane.INFORMATION_MESSAGE);
+                // @formatter:off
+                status.showMessage(Localization.lang("Unknown DOI: '%0'.", doi.getDOI()),
+                        Localization.lang("Get BibTeX entry from DOI"),
+                        JOptionPane.INFORMATION_MESSAGE);
+                // @formatter:on
             }
             return null;
         } catch (IOException e) {
@@ -127,7 +126,7 @@ public class DOItoBibTeXFetcher implements EntryFetcher {
             return null;
         }
 
-        //Usually includes an en-dash in the page range. Char is in cp1252 but not 
+        //Usually includes an en-dash in the page range. Char is in cp1252 but not
         // ISO 8859-1 (which is what latex expects). For convenience replace here.
         bibtexString = bibtexString.replaceAll("(pages=\\{[0-9]+)\u2013([0-9]+\\})", "$1--$2");
         BibtexEntry entry = BibtexParser.singleFromString(bibtexString);
